Added a simple example of what the engine API could look like.

--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -425,11 +425,10 @@ respectively.
 
 \subsection{Version Control}
 A \gls*{vcs} is a tool used for backing up and/or collaborating with developers
-on a project. The use of a \gls*{vcs} was an obvious choice as this would provide
-a platform on which the project source code could be hosted. This gives me the
-peace of mind of knowing that if for some reason a local copy of the project is
-lost or corrupted then another copy is safely hosted on the servers managed by
-the \gls*{vcs}.
+on a project. The use of a \gls*{vcs} was an obvious choice as this would
+provide a platform on which the project source code could be hosted.
+Furthermore, if for some reason a local copy of the project is lost or corrupted
+then another copy is safely hosted on the servers managed by the \gls*{vcs}.
 
 Another key feature of a \gls*{vcs} is project management. These types of systems
 provide various tools that greatly benefit developers. One such feature is known
@@ -2233,6 +2232,7 @@ other languages to be added and thus, improving accessibility.
 \textattachfile{attached_documents/milestone_2_signed.pdf}{\textcolor{skyblue}{Milestone 2}}
 \textattachfile{attached_documents/mid_project_review.pdf}{\textcolor{skyblue}{Milestone 3}}
 \textattachfile{attached_documents/meetings.docx}{\textcolor{skyblue}{Meetings}}
+\textattachfile{report.tex}{\textcolor{skyblue}{Report source}}
 
 
 \subsection{GitHub} \label{github}
