Removed extra seperator and updates to report.

--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -2058,6 +2058,16 @@ series of questions that would assess \glspl*{vmve} usability, performance and
 overall user experience. This data was recorded using Google Forms and further
 analysed to produce different sets of visualisations.
 
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{images/bar_chart_usability.png}
+  \caption{Usability bar chart}
+  \label{fig:bar_chart_usability}
+\end{figure}
+
+
+
 \subsection{Related Work}
 Computer graphics is a large field 
 - Others who have done the same.
